/*
 * Cloud Resource Service API
 * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
 *
 * OpenAPI spec version: 1.0.0
 * 
 *
 * NOTE: This class is auto generated by the swagger code generator program.
 * https://github.com/swagger-api/swagger-codegen.git
 * Do not edit the class manually.
 */


package io.swagger.client.model;

import java.util.Objects;
import java.util.Arrays;
import com.google.gson.TypeAdapter;
import com.google.gson.annotations.JsonAdapter;
import com.google.gson.annotations.SerializedName;
import com.google.gson.stream.JsonReader;
import com.google.gson.stream.JsonWriter;
import io.swagger.annotations.ApiModel;
import io.swagger.annotations.ApiModelProperty;
import io.swagger.client.model.OsType;
import java.io.IOException;
import org.threeten.bp.LocalDate;

/**
 * OrderData
 */
@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaClientCodegen", date = "2023-09-15T17:03:12.184Z")
public class OrderData {
  @SerializedName("email")
  private String email = null;

  @SerializedName("order_date")
  private LocalDate orderDate = null;

  @SerializedName("cpu_cores")
  private Integer cpuCores = null;

  @SerializedName("memory")
  private Integer memory = null;

  @SerializedName("disk_space")
  private Integer diskSpace = null;

  @SerializedName("os_type")
  private OsType osType = null;

  @SerializedName("ip_addresses")
  private Integer ipAddresses = null;

  public OrderData email(String email) {
    this.email = email;
    return this;
  }

   /**
   * Get email
   * @return email
  **/
  @ApiModelProperty(value = "")
  public String getEmail() {
    return email;
  }

  public void setEmail(String email) {
    this.email = email;
  }

  public OrderData orderDate(LocalDate orderDate) {
    this.orderDate = orderDate;
    return this;
  }

   /**
   * Get orderDate
   * @return orderDate
  **/
  @ApiModelProperty(value = "")
  public LocalDate getOrderDate() {
    return orderDate;
  }

  public void setOrderDate(LocalDate orderDate) {
    this.orderDate = orderDate;
  }

  public OrderData cpuCores(Integer cpuCores) {
    this.cpuCores = cpuCores;
    return this;
  }

   /**
   * Get cpuCores
   * @return cpuCores
  **/
  @ApiModelProperty(value = "")
  public Integer getCpuCores() {
    return cpuCores;
  }

  public void setCpuCores(Integer cpuCores) {
    this.cpuCores = cpuCores;
  }

  public OrderData memory(Integer memory) {
    this.memory = memory;
    return this;
  }

   /**
   * Get memory
   * @return memory
  **/
  @ApiModelProperty(value = "")
  public Integer getMemory() {
    return memory;
  }

  public void setMemory(Integer memory) {
    this.memory = memory;
  }

  public OrderData diskSpace(Integer diskSpace) {
    this.diskSpace = diskSpace;
    return this;
  }

   /**
   * Get diskSpace
   * @return diskSpace
  **/
  @ApiModelProperty(value = "")
  public Integer getDiskSpace() {
    return diskSpace;
  }

  public void setDiskSpace(Integer diskSpace) {
    this.diskSpace = diskSpace;
  }

  public OrderData osType(OsType osType) {
    this.osType = osType;
    return this;
  }

   /**
   * Get osType
   * @return osType
  **/
  @ApiModelProperty(value = "")
  public OsType getOsType() {
    return osType;
  }

  public void setOsType(OsType osType) {
    this.osType = osType;
  }

  public OrderData ipAddresses(Integer ipAddresses) {
    this.ipAddresses = ipAddresses;
    return this;
  }

   /**
   * Get ipAddresses
   * @return ipAddresses
  **/
  @ApiModelProperty(value = "")
  public Integer getIpAddresses() {
    return ipAddresses;
  }

  public void setIpAddresses(Integer ipAddresses) {
    this.ipAddresses = ipAddresses;
  }


  @Override
  public boolean equals(java.lang.Object o) {
    if (this == o) {
      return true;
    }
    if (o == null || getClass() != o.getClass()) {
      return false;
    }
    OrderData orderData = (OrderData) o;
    return Objects.equals(this.email, orderData.email) &&
        Objects.equals(this.orderDate, orderData.orderDate) &&
        Objects.equals(this.cpuCores, orderData.cpuCores) &&
        Objects.equals(this.memory, orderData.memory) &&
        Objects.equals(this.diskSpace, orderData.diskSpace) &&
        Objects.equals(this.osType, orderData.osType) &&
        Objects.equals(this.ipAddresses, orderData.ipAddresses);
  }

  @Override
  public int hashCode() {
    return Objects.hash(email, orderDate, cpuCores, memory, diskSpace, osType, ipAddresses);
  }


  @Override
  public String toString() {
    StringBuilder sb = new StringBuilder();
    sb.append("class OrderData {\n");
    
    sb.append("    email: ").append(toIndentedString(email)).append("\n");
    sb.append("    orderDate: ").append(toIndentedString(orderDate)).append("\n");
    sb.append("    cpuCores: ").append(toIndentedString(cpuCores)).append("\n");
    sb.append("    memory: ").append(toIndentedString(memory)).append("\n");
    sb.append("    diskSpace: ").append(toIndentedString(diskSpace)).append("\n");
    sb.append("    osType: ").append(toIndentedString(osType)).append("\n");
    sb.append("    ipAddresses: ").append(toIndentedString(ipAddresses)).append("\n");
    sb.append("}");
    return sb.toString();
  }

  /**
   * Convert the given object to string with each line indented by 4 spaces
   * (except the first line).
   */
  private String toIndentedString(java.lang.Object o) {
    if (o == null) {
      return "null";
    }
    return o.toString().replace("\n", "\n    ");
  }

}

